--- a/app/src/main/res/layout/fragment_send_confirmation.xml
+++ b/app/src/main/res/layout/fragment_send_confirmation.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".SendConfirmation">
 
-    <!-- TODO: Update blank fragment layout -->
+
     <TextView
+        android:textAlignment="center"
+        android:textSize="20dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="@string/SendConfirmation" />
 
 </FrameLayout>
