Modified activity_main.xml changed the Prompt input added commentation on the some functions in the main Activity and changed some id to better corresponding

--- a/app/src/main/res/layout/fragment_prompt_list.xml
+++ b/app/src/main/res/layout/fragment_prompt_list.xml
@@ -6,6 +6,7 @@
     tools:context=".PromptList">
 
     <TextView
+        android:id="@+id/promptList"
         android:textAlignment="center"
         android:textSize="20dp"
         android:layout_width="match_parent"
