--- a/app/src/main/res/layout/fragment_send_confirmation.xml
+++ b/app/src/main/res/layout/fragment_send_confirmation.xml
@@ -7,6 +7,7 @@
 
 
     <TextView
+        android:id="@+id/sentPrompt"
         android:textAlignment="center"
         android:textSize="20dp"
         android:layout_width="match_parent"
